# modelcheckcontraint

./: README.md  pyproject.toml  requirements.txt
apps/student/: admin.py  models.py  tests.py
apps/student/migrations/: 0001_initial.py  0002_student_age_range.py  0003_remove_student_age_range_student_age contraint.py  0004_remove_student_age contraint_student_age_10_20.py
config/: settings.py  urls.py
